fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 html, body { 
     font-family: 'Russo One', sans-serif;
     background: url(../imgs/emile-perron-190221-1024x576.jpg) no-repeat center center fixed; 
@@ -11,8 +12,4 @@ html, body {
   .card, .card-body, .list-group, .listgroup-item, .jumbotron {  
       color: white;
       opacity: .98;  
-  }
-
-  .listgroup-item {
-      border: 0 !important;
   }
